--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ usevisualizer: "real",
 visualizertype: "4", 
 metadatatechnic: "",
 ownmetadataurl: "", 
-streamurl: "https://stream-062.zeno.fm/7mv73rkr8bhvv?zs=YDEf_ht_SOyrACHTVSHG4w/status-json.xsl/", 
+streamurl: "https://http://stream-049.zeno.fm/2kemp6r7rs8uv?zs=d7va6x3lQm64P93sM0Y_Bw/status-json.xsl/", 
 streamtype: "icecast2", 
 icecastmountpoint: "/live",
 shoutcastpath: "/stream",
