--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ usevisualizer: "real",
 visualizertype: "4", 
 metadatatechnic: "",
 ownmetadataurl: "", 
-streamurl: "https:https://stream-049.zeno.fm/2kemp6r7rs8uv?zs=h30fSAhCQcC0WxOB82IguA/status-json.xsl/", 
+streamurl: "https://stream-049.zeno.fm/2kemp6r7rs8uv?zs=h30fSAhCQcC0WxOB82IguA/status-json.xsl/", 
 streamtype: "icecast2", 
 icecastmountpoint: "/live",
 shoutcastpath: "/stream",
